--- a/ITalker/app/src/main/res/values/strings.xml
+++ b/ITalker/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ITalker</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_launch">LaunchActivity</string>
+    <string name="title_activity_user">UserActivity</string>
 </resources>
