--- a/ITalker/app/src/main/res/values/strings.xml
+++ b/ITalker/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-    <string name="app_name">ITalker</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">慕聊</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_launch">LaunchActivity</string>
     <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_message">MessageActivity</string>
+    <string name="title_activity_personal">PersonalActivity</string>
 </resources>
