--- a/ITalker/app/src/main/res/values/strings.xml
+++ b/ITalker/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="app_name">慕聊</string>
+    <string name="app_name">你别是个傻子吧</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_launch">LaunchActivity</string>
